--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "json-reactform": "^0.1.14",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "5.0.0",
