chore(config): install react router + breakpoint
Installing lib react router + add breakpoint function

--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@heroicons/react": "^1.0.5",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "json-reactform": "^0.1.14",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "stein-js-client": "^0.0.2",
     "web-vitals": "^0.2.4",
