--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.2",
     "postcss": "^8.4.5",
+    "sass": "^1.49.0",
     "tailwindcss": "^3.0.18"
   }
 }
